🔒 SECURITY FIX: Remove hardcoded passwords and secrets
- Replace hardcoded Redis password with environment variable
- Replace hardcoded PostgreSQL password with environment variable
- Replace hardcoded JWT secret with environment variable
- Replace hardcoded Grafana password with environment variable
- Add comprehensive security documentation
- Update .env.example with all required security variables
- Implement proper secret management practices

Fixes GitGuardian security alert for exposed Redis CLI password

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,17 @@ REACT_APP_ENVIRONMENT=development
 
 # Database Configuration (if needed for audit logs)
 DATABASE_URL=postgresql://user:password@localhost:5432/secure_wiper
+POSTGRES_PASSWORD=your_secure_postgres_password
+
+# Redis Configuration
+REDIS_PASSWORD=your_secure_redis_password
+
+# Security Configuration
+JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters
+ENCRYPTION_KEY=your_32_character_encryption_key_here
+
+# Grafana Configuration (if using monitoring)
+GRAFANA_ADMIN_PASSWORD=your_secure_grafana_password
 
 # Cloud KMS Configuration
 # AWS KMS
